hphp/test/slow/enum_class/abstract_enum_class02.php.expectf
Fatal error: Cannot override previously defined constant H::X in G in %s/abstract_enum_class02.php on line 12
